--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,19 +29,11 @@
                 android:text="VS" />
 
             <EditText android:layout_weight="1" />
+
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/reset"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:onClick="resetBoxes"
-                android:text="Reset" />
-        </TableRow>
+
     </TableLayout>
 
     <!-- Body of buttons - has 9 weight compared with other layout
@@ -53,7 +45,16 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/reset"
+                android:layout_weight="1"
+                android:onClick="resetBoxes"
+                android:text="Reset" />
+        </TableRow>
+
+        <TableRow
             android:layout_weight="1">
 
             <TextView
@@ -73,8 +74,6 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <TextView
@@ -94,8 +93,6 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <TextView
