--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Names:" />
+
 
             <EditText android:layout_weight="1" />
 
@@ -30,6 +27,26 @@
 
             <EditText android:layout_weight="1" />
 
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="64sp"
+                android:text="0"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="64sp"
+                android:text="0"
+                android:textAlignment="center"/>
         </TableRow>
 
 
@@ -54,8 +71,7 @@
                 android:text="Reset" />
         </TableRow>
 
-        <TableRow
-            android:layout_weight="1">
+        <TableRow android:layout_weight="1">
 
             <TextView
                 android:id="@+id/box1"
@@ -73,8 +89,7 @@
                 android:onClick="onBoxClicked" />
         </TableRow>
 
-        <TableRow
-            android:layout_weight="1">
+        <TableRow android:layout_weight="1">
 
             <TextView
                 android:id="@+id/box4"
@@ -92,8 +107,7 @@
                 android:onClick="onBoxClicked" />
         </TableRow>
 
-        <TableRow
-            android:layout_weight="1">
+        <TableRow android:layout_weight="1">
 
             <TextView
                 android:id="@+id/box7"
