--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-
-            <EditText android:layout_weight="1" />
+            <EditText android:layout_weight="1"
+                android:inputType="textPersonName"
+                android:cursorVisible="false"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="VS" />
 
-            <EditText android:layout_weight="1" />
+            <EditText android:layout_weight="1"
+                android:inputType="textPersonName"
+                android:cursorVisible="false"/>
 
         </TableRow>
 
