--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,7 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <color name="bLueColour">#022CCF</color>
+    <color name="orangeColour">#FFDE03</color>
+
 </resources>
